tests/codegen/fail/union/enum_no_fields.rs
use juniper::GraphQLUnion;

#[derive(GraphQLUnion)]
enum Character {}

fn main() {}
